recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:8: error: not found: value increment
    tree(steps-1,shrink*length,angle,increment)
                                     ^Tree:11: error: not found: value increment
    tree(steps-1,shrink*length,angle,increment)
                                     ^Tree:12: error: not found: value step
    current(step)
            ^